# meeting-copilot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  TASK_LOG.md  run_claude_autonomous.sh
meeting-copilot/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
meeting-copilot/backend/: cli.py  config.py  main.py
meeting-copilot/backend/audio/: diarizer.py  file_processor.py  pipeline.py  recorder.py  transcriber.py  vad.py
meeting-copilot/backend/reasoning/: context_manager.py  dispatcher.py  prompts.py
meeting-copilot/backend/reasoning/workers/: __init__.py  action_items.py  base.py  contradictions.py  custom.py  reply.py  summary.py
meeting-copilot/backend/storage/: session.py
meeting-copilot/backend/ws/: gateway.py  protocol.py
meeting-copilot/frontend/: package-lock.json  package.json
meeting-copilot/frontend/src/: App.tsx
meeting-copilot/frontend/src/components/: AudioControls.tsx  CopilotPanel.tsx  (+8 more)
meeting-copilot/scripts/: setup.sh
meeting-copilot/tests/: test_config_settings.py  test_context_manager.py  test_contradictions.py  test_debug_endpoint.py  test_devices_endpoint.py  test_diarizer.py  test_dispatcher.py  test_e2e_recording.py  test_error_handling.py  test_export.py  test_protocol.py  test_recorder_crash.py  test_recorder_devices.py  test_recorder_dual_stream.py  test_recorder_file_saving.py  test_recorder_integration.py  test_recorder_subprocess.py  test_recording_endpoints.py  test_reply_worker.py  test_segment_persistence.py  test_settings_endpoint.py  test_storage.py  test_transcriber.py  test_workers.py
(+6 files in other folders)
