[project]
name = "meeting-copilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "faster-whisper>=1.0",
    "whisperlivekit>=0.2,<0.3",
    "pyannote.audio>=3.1",
    "silero-vad>=4.0",
    "anthropic>=0.40",
    "aiosqlite>=0.20",
    "numpy>=1.26",
    "torch>=2.0",
    "torchaudio>=2.0",
    "soundfile>=0.12",
    "pyaudio>=0.2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
